kubernetes/pod-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-web
spec:
  containers:
    - name : container-aa
      image: artemzinukov/django-app:v1
      ports:
        - containerPort: 80
